--- a/src/Resources/views/Return/view.html.twig
+++ b/src/Resources/views/Return/view.html.twig
@@ -1,4 +1,5 @@
 {% extends '@SyliusShop/layout.html.twig' %}
+{% form_theme form '@SyliusShop/Form/theme.html.twig' %}
 
 {% block title %} {{ 'sylius.ui.return'|trans }} {% endblock %}
 
@@ -17,8 +18,12 @@
             </h1>
             <div class="ui segment">
                 {{ form_start(form, {'action': path('madcoders_rma_return_form'), 'attr': {'class': 'ui large loadable form', 'novalidate': 'novalidate'}}) }}
-
-                <table id="madcoders-rm-return-items" {{ sylius_test_html_attribute('madcoders-rm-return-items') }} class="ui very basic celled table">
+                <h3 class="ui dividing header">
+                    {{ 'sylius.ui.items'|trans }}
+                    <div class="sub header">{{ 'sylius.ui.madcoders_rm.ui.return.selecte_items_to_return_form'|trans }}</div>
+                </h3>
+                <table id="madcoders-rm-return-items" {{ sylius_test_html_attribute('madcoders-rm-return-items') }}
+                       class="ui very basic celled table">
                     <thead>
                     <tr>
                         <th></th>
@@ -31,11 +36,27 @@
                         {{ form_row(form.items) }}
                      </tbody>
                 </table>
+                <div class=" ">
+                    <h3 class="ui dividing header">
+                        {{ 'sylius.ui.address'|trans }}
+                        <div class="sub header">{{ 'sylius.ui.add_address'|trans }}</div>
+                    </h3>
 
-                {{ form_row(form.returnReason, sylius_test_form_attribute('return-returnReason')) }}
+                    {% include '@MadcodersSyliusRmaPlugin/Return/Form/_address.html.twig' with {'form': form} %}
+                </div>
+                <br/>
+                <div>
+                    <h3 class="ui dividing header">
+                        {{ 'madcoders_rma.ui.return_reason'|trans }}
+                        <div class="sub header">{{ 'sylius.ui.madcoders_rm.ui.return.provide_reason'|trans }}</div>
+                    </h3>
+
+                    {{ form_row(form.returnReason, sylius_test_form_attribute('return-returnReason')) }}
+                </div>
+
                 {{ form_row(form._token) }}
                 <br/>
-                <button type="submit" class="ui fluid large primary submit button" {{ sylius_test_html_attribute('send-button') }}>{{ 'sylius.ui.send'|trans }}</button>
+                <button type="submit" class="ui fluid large primary submit button" {{ sylius_test_html_attribute('send-button') }}>{{ 'sylius.ui.create'|trans }}</button>
                 {{ form_end(form, {'render_rest': false}) }}
             </div>
         </div>
