summary page created v.2

--- a/src/Resources/views/Return/Form/_address.html.twig
+++ b/src/Resources/views/Return/Form/_address.html.twig
@@ -8,6 +8,10 @@
     {{ form_row(form.firstName, sylius_test_form_attribute(type ~ 'first-name')) }}
     {{ form_row(form.lastName, sylius_test_form_attribute(type ~ 'last-name')) }}
 </div>
+<div class="two fields">
+    {{ form_row(form.phoneNumber) }}
+    {{ form_row(form.customerEmail) }}
+</div>
 {{ form_row(form.company, sylius_test_form_attribute(type ~ 'company')) }}
 {{ form_row(form.street, sylius_test_form_attribute(type ~ 'street')) }}
 
@@ -29,4 +33,3 @@
     {{ form_row(form.city, sylius_test_form_attribute(type ~ 'city')) }}
     {{ form_row(form.postcode, sylius_test_form_attribute(type ~ 'postcode')) }}
 </div>
-{{ form_row(form.phoneNumber) }}
