--- a/src/Resources/views/Return/Form/_item.html.twig
+++ b/src/Resources/views/Return/Form/_item.html.twig
@@ -1,9 +1,9 @@
 {% block madcoders_rma_return_item_widget %}
     {% apply spaceless %}
         <tr>
-            <td>
-                {{ form_row(form.itemToReturn) }}
-            </td>
+{#            <td>#}
+{#                {{ form_row(form.itemToReturn) }}#}
+{#            </td>#}
             <td class="single line">{{ form.vars.value.productName }}</td>
             <td class="left aligned">
                 {{ form.vars.value.productSku }}
