--- a/src/Resources/views/Return/Summary/_address.html.twig
+++ b/src/Resources/views/Return/Summary/_address.html.twig
@@ -1,18 +1,12 @@
 {% import "@SyliusUi/Macro/flags.html.twig" as flags %}
 
-<address {{ sylius_test_html_attribute('address-context', "%s %s"|format(address.firstName, address.lastName)) }}>
-    {% if address.company is not null %}
-        <strong>{{ address.company }}</strong><br>
+<strong>{{ 'sylius.ui.address'|trans }}:</strong>
+<address>
+    {% if returnOrder.company is not null %}
+        {{ returnOrder.company }}<br>
     {% endif %}
-    <strong {{ sylius_test_html_attribute('full-name ', "%s %s"|format(address.firstName, address.lastName)) }}>{{ address.firstName }} {{ address.lastName }}</strong><br>
-    {% if address.phoneNumber is not null %}
-        {{ address.phoneNumber }}<br/>
-    {% endif %}
-    {{ address.street }}<br/>
-    {{ address.city }}, {{ address.postcode }}<br/>
-    {% if address|sylius_province_name is not empty %}
-        {{ address|sylius_province_name }}<br/>
-    {% endif %}
-    {{ flags.fromCountryCode(address.countryCode) }}
-    {{ address.countryCode|sylius_country_name|upper }}
+    {{ returnOrder.street }}<br/>
+    {{ returnOrder.city }}, {{ returnOrder.postcode }}<br/>
+    {{ flags.fromCountryCode(returnOrder.countryCode) }}
+    {{ returnOrder.countryCode|sylius_country_name|upper }}
 </address>
