--- a/src/Resources/views/Return/view.html.twig
+++ b/src/Resources/views/Return/view.html.twig
@@ -13,14 +13,14 @@
                 <i class="circular truck icon"></i>
                 <div class="content">
                     {{ 'sylius.ui.return'|trans }} {{ 'sylius.ui.order'|trans }} - {{ orderNumber }}
-                    <div class="sub header">{{ 'madcoders_rm.ui.return.create_return_form'|trans }}</div>
+                    <div class="sub header">{{ 'madcoders_rma.ui.return.create_return_form'|trans }}</div>
                 </div>
             </h1>
             <div class="ui segment">
                 {{ form_start(form, {'action': path('madcoders_rma_return_form'), 'attr': {'class': 'ui large loadable form', 'novalidate': 'novalidate'}}) }}
                 <h3 class="ui dividing header">
                     {{ 'sylius.ui.items'|trans }}
-                    <div class="sub header">{{ 'sylius.ui.madcoders_rm.ui.return.selecte_items_to_return_form'|trans }}</div>
+                    <div class="sub header">{{ 'madcoders_rma.ui.return.selecte_items_to_return_form'|trans }}</div>
                 </h3>
                 <table id="madcoders-rm-return-items" {{ sylius_test_html_attribute('madcoders-rm-return-items') }}
                        class="ui very basic celled table">
