--- a/src/Resources/views/Admin/Return/Label/State/draft.html.twig
+++ b/src/Resources/views/Admin/Return/Label/State/draft.html.twig
@@ -1,4 +1,4 @@
 <span class="ui gray label">
     <i class="pencil alternate icon"></i>
-    {{ 'madcoders_rma.ui.draft'|trans }}
+    {{ 'madcoders_rma.state.draft'|trans }}
 </span>
