Added managers notes functionality

--- a/src/Resources/views/Admin/Return/Show/Management/_addNotes.html.twig
+++ b/src/Resources/views/Admin/Return/Show/Management/_addNotes.html.twig
@@ -2,4 +2,16 @@
     {{ 'madcoders_rma.ui.add_notes'|trans }}
 </h4>
 <div class="ui attached segment" id="customer-consent-data">
+
+    {{ form_start(form, {'action': path('madcoders_rma_admin_order_return_show', { 'id': order_return.id } ), 'attr': {'class': 'ui large loadable form', 'novalidate': 'novalidate'}}) }}
+
+        {{ form_row(form.note) }}
+        {{ form_row(form._token) }}
+        <br/>
+
+        <button type="submit" class="ui left large primary submit button" {{ sylius_test_html_attribute('send-button') }}>
+            {{ 'sylius.ui.add'|trans }}
+        </button>
+    {{ form_end(form, {'render_rest': false}) }}
+
 </div>
