--- a/src/Resources/views/Admin/Return/Show/_content.html.twig
+++ b/src/Resources/views/Admin/Return/Show/_content.html.twig
@@ -44,6 +44,6 @@
         {% include '@MadcodersSyliusRmaPlugin/Admin/Return/Show/Management/_timeline.html.twig' %}
     </div>
     <div class="eight wide column">
-        {% include '@MadcodersSyliusRmaPlugin/Admin/Return/Show/Management/_addNotes.html.twig' %}
+        {% include '@MadcodersSyliusRmaPlugin/Admin/Return/Show/Management/_addNotes.html.twig' with {'form': form}%}
     </div>
 </div>
