--- a/src/Resources/views/Admin/Return/Show/Management/_timeline.html.twig
+++ b/src/Resources/views/Admin/Return/Show/Management/_timeline.html.twig
@@ -2,5 +2,23 @@
     {{ 'madcoders_rma.ui.timeline'|trans }}
 </h4>
 <div class="ui attached segment" id="customer-consent-data">
+    <div class="ui feed">
+    {% for logItem in changeLog %}
 
+        <div class="event">
+            <div class="label">
+                <img src="//placehold.it/50x50">
+            </div>
+            <div class="content">
+                <div class="date">
+                    {{ rma_time_ago_view(logItem.createdAt)  }}
+                </div>
+
+                {% include(rma_time_line_item_view(logItem) ) with {'logItem': logItem, 'data': order_return} %}
+
+            </div>
+        </div>
+
+    {% endfor %}
+    </div>
 </div>
