--- a/src/Resources/views/Auth/verification.html.twig
+++ b/src/Resources/views/Auth/verification.html.twig
@@ -10,12 +10,12 @@
                 <i class="circular truck icon"></i>
                 <div class="content">
                     {{ 'sylius.ui.return'|trans }}
-                    <div class="sub header">{{ 'madcoders_rm.ui.return.enter_code_you_received'|trans }}</div>
+                    <div class="sub header">{{ 'madcoders_rma.ui.verification_step.secondary_headline'|trans }}</div>
                 </div>
             </h1>
             <div class="ui segment">
                 {{ form_start(form, {'action': path('madcoders_rma_verification', { 'code': code }), 'attr': {'class': 'ui large loadable form', 'novalidate': 'novalidate'}}) }}
-                {{ form_row(form.authCode, sylius_test_form_attribute('return-authCode')) }}
+                {{ form_row(form.authCode, sylius_test_form_attribute('rma-return-auth-code')) }}
                 {{ form_row(form._token) }}
                 <br/>
                 <button type="submit" class="ui fluid large primary submit button" {{ sylius_test_html_attribute('send-button') }}>{{ 'sylius.ui.send'|trans }}</button>
