Added changed status functionality

--- a/src/Resources/views/Admin/Return/Label/State/completed.html.twig
+++ b/src/Resources/views/Admin/Return/Label/State/completed.html.twig
@@ -1,4 +1,4 @@
 <span class="ui green label">
     <i class="check icon"></i>
-    {{ 'madcoders_rma.ui.accepted'|trans }}
+    {{ 'sylius.ui.completed'|trans }}
 </span>
