--- a/src/Resources/views/Auth/start.html.twig
+++ b/src/Resources/views/Auth/start.html.twig
@@ -1,5 +1,7 @@
 {% extends '@SyliusShop/layout.html.twig' %}
 
+{% form_theme form '@SyliusShop/Form/theme.html.twig' %}
+
 {% block title %} {{ 'sylius.ui.return'|trans }} {% endblock %}
 
 {% block content %}
@@ -9,16 +11,16 @@
             <h1 class="ui header">
                 <i class="circular truck icon"></i>
                 <div class="content">
-                    {{ 'sylius.ui.return'|trans }}
+                    {{ 'madcoders_rma.ui.headline'|trans }}
                     <div class="sub header">{{ 'sylius.ui.return'|trans }}</div>
                 </div>
             </h1>
             <div class="ui segment">
                 {{ form_start(form, {'action': path('madcoders_rma_start'), 'attr': {'class': 'ui large loadable form', 'novalidate': 'novalidate'}}) }}
-                {{ form_row(form.orderNumber, sylius_test_form_attribute('return-orderNumber')) }}
+                {{ form_row(form.orderNumber, sylius_test_form_attribute('rma-order-number-field')) }}
                 {{ form_row(form._token) }}
                 <br/>
-                <button type="submit" class="ui fluid large primary submit button" {{ sylius_test_html_attribute('send-button') }}>{{ 'sylius.ui.send'|trans }}</button>
+                <button type="submit" class="ui fluid large primary submit button" {{ sylius_test_html_attribute('rma-continue-button') }}>{{ 'madcoders_rma.ui.continue_button'|trans }}</button>
                 {{ form_end(form, {'render_rest': false}) }}
             </div>
         </div>
