Customer area translations + partial admin translations

--- a/src/Resources/views/Admin/Return/Show/Management/Timeline/_addedNote.html.twig
+++ b/src/Resources/views/Admin/Return/Show/Management/Timeline/_addedNote.html.twig
@@ -1,5 +1,5 @@
 <div class="summary">
-    <a>{{ logItem.author.firstName }} {{ logItem.author.lastName }}</a> added new note:
+    <a>{{ logItem.author.firstName }} {{ logItem.author.lastName }}</a> {{ 'madcoders_rma.admin.history.added_new_note'|trans }}:
 </div>
 <div class="extra text">
     {{ logItem.note }}
