--- a/src/Resources/views/Admin/Return/Show/_customerData.html.twig
+++ b/src/Resources/views/Admin/Return/Show/_customerData.html.twig
@@ -10,6 +10,6 @@
     {% if order_return.phoneNumber is defined  %}
         <strong>{{ 'sylius.ui.phone_number'|trans }}:</strong> {{ order_return.phoneNumber }}<br/>
     {% endif %}
-    <strong>{{ 'madcoders_rma.ui.return.bank_account_number'|trans }}:</strong> {{ order_return.bankAccountNumber }}<br/>
+    <strong>{{ 'madcoders_rma.ui.form.bank_account_number'|trans }}:</strong> {{ order_return.bankAccountNumber }}<br/>
 
 </div>
