--- a/src/Resources/views/BulkAction/createNewReturn.html.twig
+++ b/src/Resources/views/BulkAction/createNewReturn.html.twig
@@ -4,7 +4,7 @@
 
 {% if data.state == 'fulfilled' %}
 
-    {{ buttons.default(path, action.label, true, 'pencil alternate', 'primary') }}
+    {{ buttons.default(path, action.label, true, 'undo alternate', 'primary') }}
 
 {% endif %}
 
