--- a/src/Resources/views/Return/summary.html.twig
+++ b/src/Resources/views/Return/summary.html.twig
@@ -71,7 +71,7 @@
                         <br/>
                         <a href="{{ path('madcoders_rma_return_form') }}" class="ui large floated button">{{ 'sylius.ui.edit'|trans }}</a>
                         <button type="submit" class="ui large right primary submit button" {{ sylius_test_html_attribute('send-button') }}>
-                            {{ 'sylius.ui.accept'|trans }}
+                            {{ 'madcoders_rma.ui.action.submit_return_form'|trans }}
                         </button>
                         {{ form_end(form, {'render_rest': false}) }}
                     </div>
