--- a/src/Resources/views/Return/view.html.twig
+++ b/src/Resources/views/Return/view.html.twig
@@ -46,8 +46,8 @@
                 <br/>
                 <div>
                     <h3 class="ui dividing header">
-                        {{ 'madcoders_rma.ui.return_reason'|trans }}
-                        <div class="sub header">{{ 'madcoders_rma.ui.return.provide_reason'|trans }}</div>
+                        {{ 'madcoders_rma.ui.fill_the_form_step.return_reason_headline'|trans }}
+                        <div class="sub header">{{ 'madcoders_rma.ui.fill_the_form_step.return_reason_subheader'|trans }}</div>
                     </h3>
 
                     {{ form_row(form.returnReason, sylius_test_form_attribute('return-returnReason')) }}
