--- a/src/Resources/views/Shop/Return/Account/Show/_customerConsent.html.twig
+++ b/src/Resources/views/Shop/Return/Account/Show/_customerConsent.html.twig
@@ -1,5 +1,5 @@
 <h4 class="ui top attached styled header">
-    {{ 'madcoders_rma.ui.your_consent'|trans }}
+    {{ 'madcoders_rma.ui.customer_consent_header'|trans }}
 </h4>
 <div class="ui attached segment" id="customer-consent-data">
     {% if order_return.orderReturnConsent == true %}
