--- a/src/Resources/views/Shop/Return/Account/Show/_customerNote.html.twig
+++ b/src/Resources/views/Shop/Return/Account/Show/_customerNote.html.twig
@@ -1,5 +1,5 @@
 <h4 class="ui top attached styled header">
-    {{ 'madcoders_rma.ui.your_note'|trans }}
+    {{ 'madcoders_rma.ui.customer_note'|trans }}
 </h4>
 <div class="ui attached segment" id="customer-note-data">
     <strong>{{ 'madcoders_rma.ui.return_reason'|trans }}:</strong> {{ order_return.returnReason }} <br/>
