--- a/src/Resources/views/Shop/Return/Account/Show/_summary.html.twig
+++ b/src/Resources/views/Shop/Return/Account/Show/_summary.html.twig
@@ -11,7 +11,7 @@
             <tr>
                 <th class="nine wide">{{ 'sylius.ui.item'|trans }}</th>
                 <th class="four wide">{{ 'sylius.ui.product_options'|trans }}</th>
-                <th class="three wide">{{ 'madcoders_rma.ui.return.return_qty'|trans }}</th>
+                <th class="three wide">{{ 'madcoders_rma.ui.qty'|trans }}</th>
             </tr>
             </thead>
             <tbody>
