--- a/src/Resources/views/Shop/Return/Label/State/canceled.html.twig
+++ b/src/Resources/views/Shop/Return/Label/State/canceled.html.twig
@@ -1,4 +1,4 @@
 <span class="ui red label">
     <i class="cancel icon"></i>
-    {{ 'sylius.ui.cancelled'|trans }}
+    {{ 'madcoders_rma.state.cancelled'|trans }}
 </span>
