--- a/src/Resources/views/Admin/Return/Show/Management/Timeline/_cancelled.html.twig
+++ b/src/Resources/views/Admin/Return/Show/Management/Timeline/_cancelled.html.twig
@@ -1,6 +1,6 @@
 <div class="summary">
-    <a>{{ logItem.author.firstName }} {{ logItem.author.lastName }}</a> cancelled return <a>{{ logItem.returnNumber }}</a>:
+    <a>{{ logItem.author.firstName }} {{ logItem.author.lastName }}</a> {{ 'madcoders_rma.admin.history.cancelled_return'|trans }} <a>{{ logItem.returnNumber }}</a>:
 </div>
 <div class="extra text">
-    Status changed to <strong>Cancelled</strong>
+    {{ 'madcoders_rma.admin.history.status_changed_to'|trans }} <strong>{{ 'madcoders_rma.state.cancelled'|trans }}</strong>
 </div>
