--- a/src/Resources/views/Admin/Return/Show/_content.html.twig
+++ b/src/Resources/views/Admin/Return/Show/_content.html.twig
@@ -1,7 +1,7 @@
 <div class="ui stackable segment grid">
     <div class="sixteen wide column">
         <h3 class="ui dividing header">
-            {{ 'madcoders_rma.ui.return.return_form'|trans }}
+            {{ 'madcoders_rma.admin.return_details_header'|trans }}
         </h3>
     </div>
     <div class="eight wide column">
@@ -16,7 +16,7 @@
             <tr>
                 <th>{{ 'sylius.ui.item'|trans }}</th>
                 <th>{{ 'sylius.ui.product_options'|trans }}</th>
-                <th>{{ 'madcoders_rma.ui.return.return_qty'|trans }}</th>
+                <th>{{ 'madcoders_rma.ui.qty'|trans }}</th>
             </tr>
             </thead>
             <tbody>
