--- a/src/Resources/views/Admin/Return/Label/State/new.html.twig
+++ b/src/Resources/views/Admin/Return/Label/State/new.html.twig
@@ -1,4 +1,4 @@
 <span class="ui blue label">
     <i class="inbox icon"></i>
-    {{ value|trans }}
+    {{ 'madcoders_rma.state.new'|trans }}
 </span>
