--- a/src/Resources/views/Admin/Reason/_form.html.twig
+++ b/src/Resources/views/Admin/Reason/_form.html.twig
@@ -3,7 +3,7 @@
 <div class="ui stackable grid">
     <div class="sixteen wide column">
         <h3 class="ui dividing header">
-            {{ 'madcoders_rma.ui.order_return_reason_form'|trans }}
+            {{ 'madcoders_rma.admin.reasons.form.header'|trans }}
         </h3>
     </div>
     <br/>
