--- a/src/Resources/views/Return/Download/pdf.html.twig
+++ b/src/Resources/views/Return/Download/pdf.html.twig
@@ -171,7 +171,7 @@
                     </tr>
                     <tr>
                         <td style="text-align: left;">
-                            <span>{{ orderReturnFormData.returnReason }}</span>
+                            <span>{{ rma_reason_name_view(orderReturnFormData.returnReason) }}</span>
                         </td>
                     </tr>
                 </table>
