--- a/src/Resources/views/Return/summary.html.twig
+++ b/src/Resources/views/Return/summary.html.twig
@@ -59,7 +59,7 @@
                 <div class="ui one column centered stackable grid">
                     <div class="column">
                         <strong>{{ 'madcoders_rma.ui.return_reason'|trans }}:</strong><br/>
-                        {{ returnOrder.returnReason }}
+                        {{ rma_reason_name_view(returnOrder.returnReason) }}
                     </div>
                 </div>
                 <div class="ui one column centered stackable grid">
