--- a/src/Resources/views/Shop/Return/Account/Show/_customerConsent.html.twig
+++ b/src/Resources/views/Shop/Return/Account/Show/_customerConsent.html.twig
@@ -2,7 +2,8 @@
     {{ 'madcoders_rma.ui.customer_consent_header'|trans }}
 </h4>
 <div class="ui attached segment" id="customer-consent-data">
-    {% if order_return.orderReturnConsent == true %}
-        {{ order_return.orderReturnConsentLabel }}
-    {% endif %}
+    {# @todo replace with dynamic consents #}
+{#    {% if order_return.orderReturnConsent == true %}#}
+{#        {{ order_return.orderReturnConsentLabel }}#}
+{#    {% endif %}#}
 </div>
